--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "init-tailwind": "npx tailwindcss init -p"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -22,12 +21,15 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
 }
